--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,9 @@
         android:fontFamily="@font/poppins_light"
         android:text="@string/escolha"
         android:textColor="@color/white"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.189"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -129,14 +130,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.206" />
 
-    <ImageView
-        android:id="@+id/menuf"
-        android:layout_width="557dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="592dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/menuf"
-        tools:layout_editor_absoluteX="-73dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
